# agent-log-gif

./: .dockerignore  .gitignore  .mise.toml  3rd_party_licenses.txt  AGENTS.md  CONTRIBUTING.md  README.md  bunfig.toml  conftest.py  demo.avif  justfile  package.json  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/skills/lucide-icon/: SKILL.md
.claude/skills/lucide-icon/scripts/: get_icon.py
.claude/skills/visual-proof/: SKILL.md
.claude/skills/worktree-setup/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/workflows/: pages.yml  publish.yml  test.yml
docs/: demo-windows-codex.avif  demo.avif  share-urls.md  ui-layout-model.md  webp-performance.md
scripts/: bench_mp4_encoding.py  benchmark_formats.py  build_web.sh  demo_session.jsonl  fetch_gifsicle_wasm.sh  generate_demos.py  generate_licenses.py  profile_memory.py  sync_color_schemes.py
skills/agent-log-gif/: SKILL.md
skills/agent-log-gif/evals/: evals.json
src/agent_log_gif/: __init__.py  analysis.py  animator.py  chrome.py  color_schemes.json  color_schemes_LICENSE.txt  frame_store.py  layout.py  parsers.py  renderer.py  session.py  share.py  spinner.py  theme.py  timeline.py  web.py
src/agent_log_gif/backends/: __init__.py  audio.py  gif.py  video.py  webp.py
src/agent_log_gif/templates/: index.html  page.html
tests/: conftest.py  sample_codex_session.jsonl  test_all.py  test_animator.py  test_audio_backend.py  test_chrome.py  test_cli.py  test_color_schemes.py  test_font.py  test_frame_store.py  test_generate_demos.py  test_generate_html.py  test_gif_backend.py  test_layout.py  test_renderer.py  test_share.py  test_theme.py  test_timeline.py  test_video_backend.py  test_web_ui.py  test_webp_backend.py
tests/__snapshots__/test_generate_html/: TestParseSessionFile.test_codex_jsonl_generates_html.html
web/: gifsicle-worker.js  index.html  pipeline.py  worker.js
web/lib/gifsicle/: gifsicle.js  gifsicle.wasm
