[project]
name = "agent-log-gif"
dynamic = ["version"]
description = "Convert Claude Code session files to animated gifs and videos. Fork of https://github.com/simonw/claude-code-transcripts."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Yoni Samlan" }
]
requires-python = ">=3.10"
dependencies = [
    "click",
    "click-default-group",
    "httpx",
    "Pillow>=10.0",
    "pyzstd>=0.19.1",
    "questionary",
    "gifsicle-bin>=1.96.4",
]

[project.urls]
Homepage = "https://github.com/ysamlan/agent-log-gif"
Changelog = "https://github.com/ysamlan/agent-log-gif/releases"
Issues = "https://github.com/ysamlan/agent-log-gif/issues"
CI = "https://github.com/ysamlan/agent-log-gif/actions"

[project.scripts]
agent-log-gif = "agent_log_gif:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "djhtml>=3.0.7",
    "pip-licenses>=5.0.0",
    "pytest>=9.0.2",
    "pytest-httpx>=0.35.0",
    "pytest-playwright>=0.7.0",
    "ruff>=0.14.0",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["agent_log_gif", "conftest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: full pipeline e2e tests (load Pyodide + render + gifsicle)"]
